# SyntheticMarket-GAN

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/processed/: AAPL_scaled.csv  AAPL_scaler.pkl
data/raw/: AAPL_2015-01-01_2025-11-29.csv
models/: generator_final.pth  generator_wgan.pth
notebooks/: 01_Exploratory_Data_Analysis.ipynb  02_Model_Definition.ipynb  03_Training_Loop.ipynb  04_Evaluation_Metrics.ipynb  05_Improved_GAN.ipynb  06_WGAN_GP.ipynb
src/: data_loader.py  make_dataset.py  preprocessing.py
