[project]
name = "synthetic-market-gan"
version = "0.1.0"
description = "Data Science project for Synthetic Market GAN"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "yfinance",
    "scikit-learn",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

