[project]
name = "synthetic-market-gan"
version = "0.1.0"
description = "Data Science project for Synthetic Market GAN"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "yfinance",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm>=4.67.1",
    "ipykernel>=6.31.0",
    "joblib>=1.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

